--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
 
 
-  </div>  -->
+  </div>  
 
   <!-- <footer >
     <p class="footer">
@@ -192,7 +192,7 @@
 
     </p>
   </footer>
-     -->
+     
   
 
 
@@ -202,9 +202,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
   <script defer src="learn.js"></script>
 
-  <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/apexcharts" defer></script> -->
-  <!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js" defer></script> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script> -->
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 
 </body>
